dwctl/src/test/snapshots/dwctl__test__golden_transcripts__golden_responses_background.snap
---
source: dwctl/src/test/golden_transcripts.rs
expression: "transcript(status, &combined, &upstream, &outlet, &fusillade, &f)"
---
=== client ===
status: 202
body: --- 202 accepted ---
{"background":true,"id":"resp_<uuid>","model":"gpt-4o","object":"response","output":[],"status":"in_progress"}
--- final GET ---
{"background":false,"completed_at":0,"created_at":0,"id":"resp_<uuid>","model":"gpt-4o","object":"response","output":[{"content":[{"annotations":[],"logprobs":[],"text":"Hello from the gateway","type":"output_text"}],"id":"item_0000000000000000","role":"assistant","status":"completed","type":"message"}],"service_tier":"priority","status":"completed","usage":{"input_tokens":10,"input_tokens_details":{"cached_tokens":0},"output_tokens":4,"output_tokens_details":{"reasoning_tokens":0},"total_tokens":14}}

=== upstream ===
--- upstream request 0 ---
POST /chat/completions
authorization: <absent>
content-type: application/json
x-fusillade-request-id: <uuid>
x-onwards-response-id: resp_<uuid>
x-onwards-endpoint: /v1/responses
x-onwards-model: gpt-4o
x-fusillade-stream: <absent>
x-fusillade-batch-zdr: <absent>
body: {"messages":[{"content":"golden-responses-background-sentinel","role":"user"}],"model":"gpt-4o"}

=== outlet ===
--- outlet http_requests ---
{
  "body": {
    "headers": {
      "authorization": "Bearer <api-key>",
      "content-type": "application/json",
      "x-fusillade-request-id": "<uuid>",
      "x-onwards-endpoint": "/v1/responses",
      "x-onwards-model": "gpt-4o",
      "x-onwards-response-id": "resp_<uuid>"
    },
    "request": {
      "background": true,
      "input": "golden-responses-background-sentinel",
      "model": "gpt-4o"
    }
  },
  "body_parsed": true,
  "instance_id": "<uuid>",
  "method": "POST",
  "span_id": null,
  "trace_id": null,
  "uri": "http://localhost/responses"
}
--- outlet http_responses ---
{
  "body": {
    "background": false,
    "completed_at": 1,
    "created_at": 1,
    "error": null,
    "frequency_penalty": 0.0,
    "id": "resp_<uuid>",
    "incomplete_details": null,
    "instructions": null,
    "max_output_tokens": null,
    "max_tool_calls": null,
    "metadata": null,
    "model": "gpt-4o",
    "object": "response",
    "output": [
      {
        "content": [
          {
            "annotations": [],
            "logprobs": [],
            "text": "Hello from the gateway",
            "type": "output_text"
          }
        ],
        "id": "item_0000000000000000",
        "role": "assistant",
        "status": "completed",
        "type": "message"
      }
    ],
    "parallel_tool_calls": true,
    "presence_penalty": 0.0,
    "previous_response_id": null,
    "prompt_cache_key": null,
    "reasoning": null,
    "safety_identifier": null,
    "service_tier": "default",
    "status": "completed",
    "store": false,
    "temperature": 1.0,
    "text": {
      "format": {
        "type": "text"
      }
    },
    "tool_choice": "auto",
    "tools": [],
    "top_logprobs": 0,
    "top_p": 1.0,
    "truncation": "disabled",
    "usage": {
      "input_tokens": 10,
      "input_tokens_details": {
        "cached_tokens": 0
      },
      "output_tokens": 4,
      "output_tokens_details": {
        "reasoning_tokens": 0
      },
      "total_tokens": 14
    }
  },
  "body_parsed": true,
  "instance_id": "<uuid>",
  "status_code": 200
}

=== fusillade ===
--- fusillade row ---
state: completed
service_tier: priority
model: gpt-4o
method: POST
path: /v1/responses
endpoint: http://127.0.0.1:<port>/ai
body: {"input":"golden-responses-background-sentinel","model":"gpt-4o"}
