dwctl/src/test/snapshots/dwctl__test__golden_transcripts__golden_responses_blocking.snap
---
source: dwctl/src/test/golden_transcripts.rs
expression: "transcript(status, &body, &upstream, &outlet, &fusillade, &f)"
---
=== client ===
status: 200
body: {"id":"resp_<uuid>","object":"response","created_at":1,"completed_at":1,"status":"completed","incomplete_details":null,"model":"gpt-4o","previous_response_id":null,"instructions":null,"output":[{"content":[{"annotations":[],"logprobs":[],"text":"Hello from the gateway","type":"output_text"}],"id":"item_<n>","role":"assistant","status":"completed","type":"message"}],"error":null,"tools":[],"tool_choice":"auto","truncation":"disabled","parallel_tool_calls":true,"text":{"format":{"type":"text"}},"top_p":1.0,"presence_penalty":0.0,"frequency_penalty":0.0,"top_logprobs":0,"temperature":1.0,"reasoning":null,"usage":{"input_tokens":10,"output_tokens":4,"total_tokens":14,"input_tokens_details":{"cached_tokens":0},"output_tokens_details":{"reasoning_tokens":0}},"max_output_tokens":null,"max_tool_calls":null,"store":false,"background":false,"service_tier":"default","metadata":null,"safety_identifier":null,"prompt_cache_key":null}

=== upstream ===
--- upstream request 0 ---
POST /chat/completions
authorization: <absent>
content-type: application/json
x-fusillade-request-id: <uuid>
x-onwards-response-id: resp_<uuid>
x-onwards-endpoint: /v1/responses
x-onwards-model: gpt-4o
x-fusillade-stream: <absent>
x-fusillade-batch-zdr: <absent>
body: {"messages":[{"content":"golden-responses-blocking-sentinel","role":"user"}],"model":"gpt-4o"}

=== outlet ===
--- outlet http_requests ---
{
  "body": {
    "headers": {
      "authorization": "Bearer <api-key>",
      "content-type": "application/json",
      "x-fusillade-request-id": "<uuid>",
      "x-onwards-endpoint": "/v1/responses",
      "x-onwards-model": "gpt-4o",
      "x-onwards-response-id": "resp_<uuid>"
    },
    "request": {
      "input": "golden-responses-blocking-sentinel",
      "model": "gpt-4o"
    }
  },
  "body_parsed": true,
  "instance_id": "<uuid>",
  "method": "POST",
  "span_id": null,
  "trace_id": null,
  "uri": "http://localhost/responses"
}
--- outlet http_responses ---
{
  "body": {
    "background": false,
    "completed_at": 1,
    "created_at": 1,
    "error": null,
    "frequency_penalty": 0.0,
    "id": "resp_<uuid>",
    "incomplete_details": null,
    "instructions": null,
    "max_output_tokens": null,
    "max_tool_calls": null,
    "metadata": null,
    "model": "gpt-4o",
    "object": "response",
    "output": [
      {
        "content": [
          {
            "annotations": [],
            "logprobs": [],
            "text": "Hello from the gateway",
            "type": "output_text"
          }
        ],
        "id": "item_<n>",
        "role": "assistant",
        "status": "completed",
        "type": "message"
      }
    ],
    "parallel_tool_calls": true,
    "presence_penalty": 0.0,
    "previous_response_id": null,
    "prompt_cache_key": null,
    "reasoning": null,
    "safety_identifier": null,
    "service_tier": "default",
    "status": "completed",
    "store": false,
    "temperature": 1.0,
    "text": {
      "format": {
        "type": "text"
      }
    },
    "tool_choice": "auto",
    "tools": [],
    "top_logprobs": 0,
    "top_p": 1.0,
    "truncation": "disabled",
    "usage": {
      "input_tokens": 10,
      "input_tokens_details": {
        "cached_tokens": 0
      },
      "output_tokens": 4,
      "output_tokens_details": {
        "reasoning_tokens": 0
      },
      "total_tokens": 14
    }
  },
  "body_parsed": true,
  "instance_id": "<uuid>",
  "status_code": 200
}

=== fusillade ===
--- fusillade row ---
state: completed
service_tier: priority
model: gpt-4o
method: POST
path: /v1/responses
endpoint: 
body: {"input":"golden-responses-blocking-sentinel","model":"gpt-4o"}
